<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Reservation.ReservationFormFragment">

    <TextView
        android:id="@+id/text_reservationForm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_todo"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_reservationForm_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_reservationForm_email"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reservationForm_title"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/input_reservationForm_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_reservationForm_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reservationForm_email"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/text_reservationForm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_reservationForm_date"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_reservationForm_email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/input_reservationForm_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/input_reservationForm_date"
        android:inputType="date"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reservationForm_date"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/text_reservationForm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_reservationForm_time"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_reservationForm_date"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/input_reservationForm_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/input_reservationForm_time"
        android:inputType="time"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reservationForm_time"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_reservationForm_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/button_reservationForm_submit"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_reservationForm_time" />

    <Button
        android:id="@+id/button_reservationForm_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_vertical|end"
        android:text="@string/button_reservationForm_cancel"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_reservationForm_submit"
        app:layout_constraintTop_toTopOf="@+id/button_reservationForm_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>