<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_searchBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search.SearchBoxFragment">

    <TextView
        android:id="@+id/text_search_title"
        android:layout_width="235dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_search_title"
        android:textColor='#000000'
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/input_search_keyword"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_search_keyword"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:completionThreshold="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search_title"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/input_search_distance"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_search_distance"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_search_keyword"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/text_search_category"
        android:layout_width="133dp"
        android:layout_height="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_search_category"
        android:textColor="#e601ff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_search_distance"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spinner_search_category"
        android:layout_width="209dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search_category"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/input_search_location"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_search_location"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_search_category"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkbox_search_autoLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="#e601ff"
        android:text="@string/checkbox_search_autoLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_search_location"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_search_submit"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_search_submit"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_search_autoLocation"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_search_clear"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_search_clear"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/button_search_submit"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_search_autoLocation"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>